# open-targets

./: .gitignore  AGENT.md  README.md  pyproject.toml
code_generation/: reference_kg_kg.py  schema.py
config/: biocypher_config.yaml  schema_config_experimental_kg.yaml
example/: YUYAO_README.md
example/custom_subset/: biocypher_config.yaml  custom_subset.py
example/full_graph/: biocypher_config.yaml  full_graph.py  schema_config.yaml
open_targets/: config.py
open_targets/adapter/: context.py  expression.py  scan_operation.py  scan_operation_predicate.py
open_targets/adapter/_helper/: _acquisition_definition.py
open_targets/data/: download.py  schema.py  schema.py.jinja  schema_base.py
open_targets/data/metadata/: __init__.py  _fetch.py  model.py
open_targets/definition/: helper.py  knowledge_graph.py
open_targets/definition/experimental_kg/: constant.py  kg.py  namespace.py
open_targets/definition/experimental_kg/edge/: __init__.py  edge_cell_line_sampled_from_tissue.py  edge_disease_has_database_cross_reference.py  edge_disease_has_database_cross_reference_database_cross_reference.py  edge_disease_has_synonym_broad.py  edge_disease_has_synonym_exact.py  edge_disease_has_synonym_narrow.py  edge_disease_is_a.py  (+58 more)
open_targets/definition/reference_kg/: constant.py  kg.py
scripts/: open_targets_biocypher_run.py  open_targets_biocypher_run_exp.py
test/adapter/: test_acquisition_definition.py  test_context.py
test/data/: test_download.py  test_schema.py
test/data/metadata/: test_fetch.py  test_model.py
test/fixture/mock/: croissant.json
(+246 files in other folders)
