[project]
name = "open_targets"
version = "0.4.0"
description = "BioCypher Open Targets data adapter"
authors = [
    { name = "Paul Ka Po To", email = "kto@ebi.ac.uk" },
    { name = "Sebastian Lobentanzer", email = "sebastian.lobentanzer@gmail.com" },
]
requires-python = ">=3.10,<3.11"
dependencies = [
    "bioregistry>=0.12.13,<0.13",
    "biocypher>=0.9.4,<0.10",
    "duckdb>=1.2.2,<2",
    "xxhash>=3.5.0,<3.6",
]

[tool.open-targets]
data-version = "25.12"
metadata-url = "https://ftp.ebi.ac.uk/pub/databases/opentargets/platform/25.12/croissant.json"

[dependency-groups]
dev = [
    "pytest>=8.3.5,<9",
    "jinja2>=3.1.6,<4",
    "tomli>=2.2.1,<3",
    "ruff>=0.11.8,<0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.pycodestyle]
max-doc-length = 80

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"test/*" = ["S101", "D100", "D101", "D102", "D103", "D104", "SLF001"]

[tool.pyright]
pythonVersion = "3.10"
pythonPlatform = "All"
# strict on main code, standard on test to allow private method access
typeCheckingMode = "standard"
strict = ["open_targets", "scripts"]
